# routes/api.php
@@ -18,12 +18,13 @@ Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('tablets', TabletController::class);
-    Route::apiResource('drivers', DriverController::class);
 });
+Route::apiResource('drivers', DriverController::class);
 
 Route::apiResource('leaderboards',  LeaderboardController::class);
 Route::apiResource('car-models', CarsController::class);
 Route::get('car-colors', [CarsController::class, 'getCarColors']);
+Route::post('/drivers/by-pin', [DriverController::class, 'getByPincode ']);
 Route::get('/leaderboards/{id}/results', [LeaderboardController::class, 'getResults']);
 
 Route::get('/dashboard/user-counts', [DashboardController::class, 'getCounts']);
